fixed homepage carousel so that it doesn't break on smaller screens

--- a/wp-content/themes/nousdesign/assets/css/page-home.css
+++ b/wp-content/themes/nousdesign/assets/css/page-home.css
@@ -3,6 +3,7 @@ body .home-container{
   width: 100%;
   top: 50%;
   margin-top: -275px;
+  overflow: hidden;
 }
 
 
@@ -46,6 +47,15 @@ body .home-container{
   position: absolute;
   top: 0;
   height: 455px;
+  width: 6000px;
+}
+
+.home-carousel-text ul{
+  float: left;
+  position: relative;
+  width: 1500px;
+  height: 455px;
+  display: block;
 }
 
 .home-carousel-text ul li{
@@ -99,4 +109,15 @@ body .home-container{
   filter:alpha(opacity=70);
   -moz-opacity: 0.7;
   opacity: 0.7;
+}
+
+
+@media (max-width: 767px){
+  .home-carousel-text{
+    width: 4000px;
+  }
+
+  .home-carousel-text ul{
+    width: 1000px;
+  }
 }
